--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								maX7sytbAIsU
-								b5uLokZVhg==
+								6iOkVxmMJRh5
+								tvCP9WT0eQ==
 								</data>
 								<key>Size</key>
-								<integer>134334</integer>
+								<integer>135105</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								U2NKrOaIx5LN
-								Y1D+KoAeyg==
+								q7ii5oXBy1f0
+								e0E0T6kWtg==
 								</data>
 								<key>Size</key>
-								<integer>45636</integer>
+								<integer>46853</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
