--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -212,18 +212,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								LUUbsUnLGXSX
-								FOzXlhTIGg==
+								Q8ECp+mK4S2A
+								B+BR3Rs06A==
 								</data>
 								<key>Size</key>
-								<integer>143901</integer>
+								<integer>144672</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								8xIi1J/c7P2b
-								hNIyNXXC+w==
+								8127//DgOwdn
+								Qrl/Idjm4g==
 								</data>
 								<key>Size</key>
 								<integer>31970</integer>
@@ -242,11 +242,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								17Vx2Mo3dLlw
-								FcN4RNrofQ==
+								WHb0VGRhYqA0
+								LG/ZB0vunw==
 								</data>
 								<key>Size</key>
-								<integer>61240</integer>
+								<integer>62497</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
