--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -92,11 +92,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CqO/NBhPWDYh
-								BJfcj8Yb3w==
+								mbfiU9PbM1nb
+								qrAjQVwSnQ==
 								</data>
 								<key>Size</key>
-								<integer>134178</integer>
+								<integer>134949</integer>
 							</dict>
 							<key>files/stacks_page_page35.js</key>
 							<dict>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								4iFGs36i29UJ
-								b73oZGVzOA==
+								3NvePDCYSqbp
+								ge6luVSTkQ==
 								</data>
 								<key>Size</key>
-								<integer>44593</integer>
+								<integer>45811</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
