--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								OcCdw0i+79c9
-								HQIECDuxBw==
+								sm7QzMFBFTmQ
+								Cwf+T09FPQ==
 								</data>
 								<key>Size</key>
-								<integer>136794</integer>
+								<integer>137565</integer>
 							</dict>
 							<key>files/stacks_page_page36.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								zI+mR1f706af
-								N9ybOOJyIw==
+								+eg1Pe2Smq0E
+								cgllv+Y1Qg==
 								</data>
 								<key>Size</key>
-								<integer>47628</integer>
+								<integer>48860</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
