--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3e71RgRF7rZc
-								Y3sb76ryXA==
+								E4bNVJEQoski
+								NRt8OJ/lGw==
 								</data>
 								<key>Size</key>
-								<integer>128335</integer>
+								<integer>129106</integer>
 							</dict>
 							<key>files/stacks_page_page37.js</key>
 							<dict>
@@ -102,11 +102,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								txo8D29xoLQq
-								GUhbmUzxmA==
+								fGlHGh86AslD
+								JUigOx+7BQ==
 								</data>
 								<key>Size</key>
-								<integer>38659</integer>
+								<integer>40005</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
