--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/05-Research-Jam/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -62,11 +62,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Lg3CRrkWvfPV
-								bGq5OQuhjA==
+								qZOO++TVgCvC
+								aTLeDzBm8Q==
 								</data>
 								<key>Size</key>
-								<integer>128303</integer>
+								<integer>129074</integer>
 							</dict>
 							<key>files/stacks_page_page38.js</key>
 							<dict>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								kBDDCEd6LJbS
-								DmMwxdm6Vw==
+								V+bASm/odlU9
+								dw/ZZujHpw==
 								</data>
 								<key>Size</key>
-								<integer>39333</integer>
+								<integer>40672</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
