--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -42,11 +42,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								66+EzmJpWbaH
-								IFcX4ykuAg==
+								m3xLroFaQlQm
+								Lb2FgNBZMw==
 								</data>
 								<key>Size</key>
-								<integer>49975</integer>
+								<integer>51214</integer>
 							</dict>
 							<key>index_files/small_109761.jpg</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								w4okl28KdDbU
-								pb2ZBpLrHg==
+								maiPOtj+M52m
+								oz6WcSTdVw==
 								</data>
 								<key>Size</key>
-								<integer>141657</integer>
+								<integer>142428</integer>
 							</dict>
 							<key>index_files/stacks_page_page16.js</key>
 							<dict>
