--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -232,18 +232,18 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								i0VjUpF2Eq5T
-								GOug5Yy0Lg==
+								v0Q4cUtQCQ8R
+								dC1Ki8RJZQ==
 								</data>
 								<key>Size</key>
-								<integer>142827</integer>
+								<integer>143598</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								qfhiYboZ/A24
-								Y5+sJmVgQw==
+								XTshYeu9Q/JU
+								R7p0to5MFg==
 								</data>
 								<key>Size</key>
 								<integer>31970</integer>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								wimYwiwUGivP
-								G638SuarrA==
+								Rwa4KVL2Va+R
+								iuvGc1kzqw==
 								</data>
 								<key>Size</key>
-								<integer>63223</integer>
+								<integer>64438</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
