--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/03-Complex-Networks-Winter-Workshop/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:37Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -242,11 +242,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								um7bEBWqMRxM
-								JUBXB+jtrA==
+								JBujyE0Rmzxz
+								ta51FbQKbg==
 								</data>
 								<key>Size</key>
-								<integer>144551</integer>
+								<integer>145322</integer>
 							</dict>
 							<key>files/stacks_page_page49.js</key>
 							<dict>
@@ -262,11 +262,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sGDSA/xcDKff
-								tcaG9kcvgw==
+								3AJnA+UTXbR+
+								g6Vty6k6yw==
 								</data>
 								<key>Size</key>
-								<integer>69660</integer>
+								<integer>70892</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
