--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-20T22:15:38Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -112,11 +112,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								sN0/ufn5KIcN
-								UZw+8ypIjQ==
+								Jk1FHNIhQdGg
+								ryBgSkqMKA==
 								</data>
 								<key>Size</key>
-								<integer>125145</integer>
+								<integer>125916</integer>
 							</dict>
 							<key>files/stacks_page_page45.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								9sdZFq5narSD
-								0icL/7/X+g==
+								FgsAZRPkuqzU
+								1Hbr24d7gw==
 								</data>
 								<key>Size</key>
-								<integer>39354</integer>
+								<integer>40687</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
