--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/08-Big-Spread002C-Big-Dead/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/08-Big-Spread002C-Big-Dead/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								QPgRlo8LXx15
-								Djn551Tzew==
+								iiiTMk7uRU11
+								Soou4oHeTQ==
 								</data>
 								<key>Size</key>
-								<integer>40004</integer>
+								<integer>40454</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
