--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/09-Prediction003A-The-Next-Big-Thing/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/09-Prediction003A-The-Next-Big-Thing/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								RJd2DsC24cAX
-								PA74LCPoeQ==
+								fWDY0VA5AX51
+								4uqHPzIQ8g==
 								</data>
 								<key>Size</key>
-								<integer>40020</integer>
+								<integer>40464</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
