--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/11-Big-Data002C-Big-Stories/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/11-Big-Data002C-Big-Stories/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								hdUS0l1Cl3dz
-								W20O8F/gSQ==
+								MZXNSt7QSmpV
+								eLkwwWV5uQ==
 								</data>
 								<key>Size</key>
-								<integer>40004</integer>
+								<integer>40455</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
