--- a/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/2-Paper-Shredder/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/2-Paper-Shredder/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-16T16:18:06Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -72,31 +72,31 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								yIRy0HXtK5Ix
-								pzB0dPdU5w==
+								89uLkx8H18uH
+								EvsF5PhwTQ==
 								</data>
 								<key>Size</key>
-								<integer>127642</integer>
+								<integer>128668</integer>
 							</dict>
 							<key>files/stacks_page_page11.js</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								mP0otHmrMsZb
-								IgKSymOxuA==
+								dw+DTBeC4PcY
+								i2Gx7l4aEA==
 								</data>
 								<key>Size</key>
-								<integer>27447</integer>
+								<integer>28346</integer>
 							</dict>
 							<key>index.html</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								0Oc65ZDjF0Xf
-								/mYaEotLLg==
+								ijqZkZ5OOa0J
+								7XUGnnSFgQ==
 								</data>
 								<key>Size</key>
-								<integer>81190</integer>
+								<integer>81567</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
