--- a/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/3-SCRaPS003A-Student-Complexity-Research-and-Pizza-Seminar/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/3-SCRaPS003A-Student-Complexity-Research-and-Pizza-Seminar/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,11 +82,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								WB66kovQoLcP
-								OE4KPE3C5g==
+								U3OXg8gBvw4y
+								GSc0w4bFJQ==
 								</data>
 								<key>Size</key>
-								<integer>40044</integer>
+								<integer>40466</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
