--- a/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/4-Listserv/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/10-003Cheader003ECommunity002B003C002Fheader003E/ChildPages/4-Listserv/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-15T18:12:58Z</date>
+						<date>2018-03-21T18:52:36Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -122,11 +122,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								397k9pHpXW5s
-								1Ejd6ofj9A==
+								se0cSNdD1qeB
+								hg3+WhKWOQ==
 								</data>
 								<key>Size</key>
-								<integer>44245</integer>
+								<integer>44667</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
