updated format of speaker lists
updated format of speaker lists

--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/02-Symposium---Science-of-stories/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-27T21:39:14Z</date>
+						<date>2018-03-28T14:33:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -98,26 +98,6 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
-							<key>files/stacks-image-4d937f0-100x150.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								zVK36KOY+dKO
-								UhinWqIFVw==
-								</data>
-								<key>Size</key>
-								<integer>8507</integer>
-							</dict>
-							<key>files/stacks-image-4d937f0-100x150@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								FBGZfaKRY86E
-								4HJ4zNJR9w==
-								</data>
-								<key>Size</key>
-								<integer>12166</integer>
-							</dict>
 							<key>files/stacks-image-6accef7-150x150.png</key>
 							<dict>
 								<key>Digest</key>
@@ -168,16 +148,6 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
-							<key>files/stacks-image-8273851.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								U23I5aBnPxgz
-								r/tsyN5z2Q==
-								</data>
-								<key>Size</key>
-								<integer>62867</integer>
-							</dict>
 							<key>files/stacks-image-86b04b6-296x300.png</key>
 							<dict>
 								<key>Digest</key>
@@ -218,15 +188,35 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
+							<key>files/stacks-image-faf7292-250x374.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								NNBt6Bo0YD+W
+								OAAFcd+YGA==
+								</data>
+								<key>Size</key>
+								<integer>97449</integer>
+							</dict>
+							<key>files/stacks-image-fedaa0e.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								57bpHfv89NjX
+								JTxk9G36UA==
+								</data>
+								<key>Size</key>
+								<integer>63416</integer>
+							</dict>
 							<key>files/stacks_page_page48.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								oI4uO8VQShRF
-								QH9nSrHI4A==
+								/jn2vx0hruf7
+								kIj36cOPhw==
 								</data>
 								<key>Size</key>
-								<integer>146462</integer>
+								<integer>149194</integer>
 							</dict>
 							<key>files/stacks_page_page48.js</key>
 							<dict>
@@ -252,11 +242,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								DtKncaOkKH/g
-								ziexH6YMoA==
+								aP39ktjzp0SB
+								v+wMD9fhpw==
 								</data>
 								<key>Size</key>
-								<integer>64421</integer>
+								<integer>65959</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
