--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/04-Idea-Collider/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-27T21:39:14Z</date>
+						<date>2018-03-28T14:33:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -82,8 +82,8 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								Za/hKGmNtpVs
-								Cy+JP/4j7g==
+								bnvPHKkvnJjw
+								40rFN5sPSQ==
 								</data>
 								<key>Size</key>
 								<integer>130280</integer>
