--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/ChildPages/1-Details/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-27T21:39:14Z</date>
+						<date>2018-03-28T14:33:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -78,36 +78,6 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
-							<key>files/stacks-image-0487eb1-250x352.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								URRlHX+4bKQ3
-								SJT9bOuiPg==
-								</data>
-								<key>Size</key>
-								<integer>17599</integer>
-							</dict>
-							<key>files/stacks-image-19305a5-250x314.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								XIC+xUdHnp0v
-								RKd7y72nvg==
-								</data>
-								<key>Size</key>
-								<integer>150542</integer>
-							</dict>
-							<key>files/stacks-image-19305a5-250x314@2x.png</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								RX9TCp2mtdLU
-								fmNQyCg30Q==
-								</data>
-								<key>Size</key>
-								<integer>521808</integer>
-							</dict>
 							<key>files/stacks-image-2db60e9-98x98.jpg</key>
 							<dict>
 								<key>Digest</key>
@@ -128,35 +98,25 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
-							<key>files/stacks-image-469645b-98x150.png</key>
+							<key>files/stacks-image-38c68f0-250x352.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								SdC49IhJ3JHE
-								zutzsmftPQ==
+								xWgCylHET+aQ
+								OTlLpmeH5g==
 								</data>
 								<key>Size</key>
-								<integer>12547</integer>
+								<integer>88231</integer>
 							</dict>
-							<key>files/stacks-image-4d937f0-100x150.jpg</key>
+							<key>files/stacks-image-48ee80b-248x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								zVK36KOY+dKO
-								UhinWqIFVw==
+								5TDFzzFpfPjq
+								cYaWK35Dyg==
 								</data>
 								<key>Size</key>
-								<integer>8507</integer>
-							</dict>
-							<key>files/stacks-image-4d937f0-100x150@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								FBGZfaKRY86E
-								4HJ4zNJR9w==
-								</data>
-								<key>Size</key>
-								<integer>12166</integer>
+								<integer>91743</integer>
 							</dict>
 							<key>files/stacks-image-4df56e4-296x300.png</key>
 							<dict>
@@ -167,6 +127,16 @@
 								</data>
 								<key>Size</key>
 								<integer>83792</integer>
+							</dict>
+							<key>files/stacks-image-678f5ae.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								IxgZd0oyRyQh
+								SHVaRd2FAg==
+								</data>
+								<key>Size</key>
+								<integer>56928</integer>
 							</dict>
 							<key>files/stacks-image-6accef7-150x150.png</key>
 							<dict>
@@ -208,15 +178,25 @@
 								<key>Size</key>
 								<integer>7818</integer>
 							</dict>
-							<key>files/stacks-image-89210a6.jpg</key>
+							<key>files/stacks-image-9268316.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rrQJea//KHWm
-								x4YXVQrhZA==
+								f1s873WCbFS1
+								wpYZpe9feg==
 								</data>
 								<key>Size</key>
-								<integer>19426</integer>
+								<integer>71744</integer>
+							</dict>
+							<key>files/stacks-image-9e3cec5-98x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SdC49IhJ3JHE
+								zutzsmftPQ==
+								</data>
+								<key>Size</key>
+								<integer>12547</integer>
 							</dict>
 							<key>files/stacks-image-9fc72ff-98x98.jpg</key>
 							<dict>
@@ -248,65 +228,65 @@
 								<key>Size</key>
 								<integer>553274</integer>
 							</dict>
-							<key>files/stacks-image-abde995-248x372.jpg</key>
+							<key>files/stacks-image-bcdb310-250x314.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								iAt96mct8st1
-								/puDpF7lFg==
+								qBHrRiCWMox6
+								2FkHspnnHQ==
 								</data>
 								<key>Size</key>
-								<integer>19945</integer>
+								<integer>101994</integer>
 							</dict>
-							<key>files/stacks-image-b91e34b-248x374.jpg</key>
+							<key>files/stacks-image-bcdb310-250x314@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								1Ug85H9RcAb3
-								BD5SHznB9w==
+								4io63N7fJ07v
+								4RzFtwQ6mw==
 								</data>
 								<key>Size</key>
-								<integer>21856</integer>
+								<integer>355639</integer>
 							</dict>
-							<key>files/stacks-image-d517d1c-250x184.png</key>
+							<key>files/stacks-image-c381c2a-248x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TMCl+A3rkWPr
-								ir2UHlWmNw==
+								/XUiP8teJU7f
+								x+qfMIwQig==
 								</data>
 								<key>Size</key>
-								<integer>114717</integer>
+								<integer>119401</integer>
 							</dict>
-							<key>files/stacks-image-fefd3c8-250x374.jpg</key>
+							<key>files/stacks-image-e5aa8ea-248x372.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								QklJIomDzSnd
-								z+ptHq+DAw==
+								zIYo7nS1ydg3
+								+A8JEtbv2w==
 								</data>
 								<key>Size</key>
-								<integer>25359</integer>
+								<integer>92596</integer>
 							</dict>
-							<key>files/stacks-image-fefd3c8-250x374@2x.jpg</key>
+							<key>files/stacks-image-faf7292-250x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								oRl78ULufjgA
-								PuYETY2kkA==
+								NNBt6Bo0YD+W
+								OAAFcd+YGA==
 								</data>
 								<key>Size</key>
-								<integer>37826</integer>
+								<integer>97449</integer>
 							</dict>
 							<key>files/stacks_page_page46.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								bbGSEJarJP+I
-								IKE3GdE3Jw==
+								ITNlk5isXfGR
+								wA0rsoK29Q==
 								</data>
 								<key>Size</key>
-								<integer>154782</integer>
+								<integer>165752</integer>
 							</dict>
 							<key>files/stacks_page_page46.js</key>
 							<dict>
@@ -332,11 +312,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								KolOqiFvTfEW
-								S5ISwSWFjA==
+								4QDOgVMxLBhc
+								bP6nINOnVQ==
 								</data>
 								<key>Size</key>
-								<integer>76879</integer>
+								<integer>82282</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
