--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/01-Symposium---Health-and-Wellness/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-27T21:39:14Z</date>
+						<date>2018-03-28T14:33:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -78,45 +78,45 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
-							<key>files/stacks-image-0487eb1-250x352.jpg</key>
+							<key>files/stacks-image-38c68f0-250x352.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								URRlHX+4bKQ3
-								SJT9bOuiPg==
+								xWgCylHET+aQ
+								OTlLpmeH5g==
 								</data>
 								<key>Size</key>
-								<integer>17599</integer>
+								<integer>88231</integer>
 							</dict>
-							<key>files/stacks-image-19305a5-250x314.png</key>
+							<key>files/stacks-image-48ee80b-248x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								XIC+xUdHnp0v
-								RKd7y72nvg==
+								5TDFzzFpfPjq
+								cYaWK35Dyg==
 								</data>
 								<key>Size</key>
-								<integer>150542</integer>
+								<integer>91743</integer>
 							</dict>
-							<key>files/stacks-image-19305a5-250x314@2x.png</key>
+							<key>files/stacks-image-678f5ae.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								RX9TCp2mtdLU
-								fmNQyCg30Q==
+								IxgZd0oyRyQh
+								SHVaRd2FAg==
 								</data>
 								<key>Size</key>
-								<integer>521808</integer>
+								<integer>56928</integer>
 							</dict>
-							<key>files/stacks-image-89210a6.jpg</key>
+							<key>files/stacks-image-9268316.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								rrQJea//KHWm
-								x4YXVQrhZA==
+								f1s873WCbFS1
+								wpYZpe9feg==
 								</data>
 								<key>Size</key>
-								<integer>19426</integer>
+								<integer>71744</integer>
 							</dict>
 							<key>files/stacks-image-9e3cec5-98x150.png</key>
 							<dict>
@@ -128,65 +128,55 @@
 								<key>Size</key>
 								<integer>12547</integer>
 							</dict>
-							<key>files/stacks-image-abde995-248x372.jpg</key>
+							<key>files/stacks-image-bcdb310-250x314.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								iAt96mct8st1
-								/puDpF7lFg==
+								qBHrRiCWMox6
+								2FkHspnnHQ==
 								</data>
 								<key>Size</key>
-								<integer>19945</integer>
+								<integer>101994</integer>
 							</dict>
-							<key>files/stacks-image-b91e34b-248x374.jpg</key>
+							<key>files/stacks-image-bcdb310-250x314@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								1Ug85H9RcAb3
-								BD5SHznB9w==
+								4io63N7fJ07v
+								4RzFtwQ6mw==
 								</data>
 								<key>Size</key>
-								<integer>21856</integer>
+								<integer>355639</integer>
 							</dict>
-							<key>files/stacks-image-d517d1c-250x184.png</key>
+							<key>files/stacks-image-c381c2a-248x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								TMCl+A3rkWPr
-								ir2UHlWmNw==
+								/XUiP8teJU7f
+								x+qfMIwQig==
 								</data>
 								<key>Size</key>
-								<integer>114717</integer>
+								<integer>119401</integer>
 							</dict>
-							<key>files/stacks-image-fefd3c8-250x374.jpg</key>
+							<key>files/stacks-image-e5aa8ea-248x372.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								QklJIomDzSnd
-								z+ptHq+DAw==
+								zIYo7nS1ydg3
+								+A8JEtbv2w==
 								</data>
 								<key>Size</key>
-								<integer>25359</integer>
-							</dict>
-							<key>files/stacks-image-fefd3c8-250x374@2x.jpg</key>
-							<dict>
-								<key>Digest</key>
-								<data>
-								oRl78ULufjgA
-								PuYETY2kkA==
-								</data>
-								<key>Size</key>
-								<integer>37826</integer>
+								<integer>92596</integer>
 							</dict>
 							<key>files/stacks_page_page34.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								0LXKIFFAQ8f/
-								IKj4rUlY+A==
+								ef5Cd/y7Cs4b
+								CsDdaqfWuA==
 								</data>
 								<key>Size</key>
-								<integer>146289</integer>
+								<integer>158173</integer>
 							</dict>
 							<key>files/stacks_page_page34.js</key>
 							<dict>
@@ -202,11 +192,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								M1ZyeHfQpld4
-								rKlqlYpNPA==
+								0LOzoh+npWdb
+								H1NGVi4r/g==
 								</data>
 								<key>Size</key>
-								<integer>59816</integer>
+								<integer>62120</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
