--- a/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/06-Events-and-Programs/ChildPages/06-Community-Lectures/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-27T21:39:14Z</date>
+						<date>2018-03-28T14:33:51Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -58,65 +58,65 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
-							<key>files/stacks-image-26fa0d2-266x398.jpg</key>
+							<key>files/stacks-image-02b24a8-600x514.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								nC2uMUbCLs0f
-								Xmr/yfPnJA==
+								Q1aCjVlhKg+Y
+								jmfbCvJttg==
 								</data>
 								<key>Size</key>
-								<integer>27261</integer>
+								<integer>129651</integer>
 							</dict>
-							<key>files/stacks-image-26fa0d2-266x398@2x.jpg</key>
+							<key>files/stacks-image-02b24a8-600x514@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								+LSGArJQmWv0
-								Qlr08PgUtg==
+								VJG1bU+SYY+H
+								k4OKlLpfnA==
 								</data>
 								<key>Size</key>
-								<integer>41499</integer>
+								<integer>367763</integer>
 							</dict>
-							<key>files/stacks-image-db6e3e4.png</key>
+							<key>files/stacks-image-0de57a8-250x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								BZlctRzG691v
-								TJrEhyWB/A==
+								7aDU4uTf1qUA
+								bOd8Z6Rm5Q==
 								</data>
 								<key>Size</key>
-								<integer>138820</integer>
+								<integer>98956</integer>
 							</dict>
-							<key>files/stacks-image-e2bfe08-248x374.jpg</key>
+							<key>files/stacks-image-0de57a8-250x374@2x.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								1Ug85H9RcAb3
-								BD5SHznB9w==
+								nuMQonXTuKK/
+								iPLaGNKmWw==
 								</data>
 								<key>Size</key>
-								<integer>21856</integer>
+								<integer>358598</integer>
 							</dict>
-							<key>files/stacks-image-e2bfe08-248x374@2x.jpg</key>
+							<key>files/stacks-image-48ee80b-248x374.png</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								LUC1K2Yo0FoJ
-								T/Dqe9rAxg==
+								5TDFzzFpfPjq
+								cYaWK35Dyg==
 								</data>
 								<key>Size</key>
-								<integer>33807</integer>
+								<integer>91743</integer>
 							</dict>
 							<key>files/stacks_page_page45.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								Jk1FHNIhQdGg
-								ryBgSkqMKA==
+								njtcY2ObocAr
+								e2tVjiwJWA==
 								</data>
 								<key>Size</key>
-								<integer>125916</integer>
+								<integer>131596</integer>
 							</dict>
 							<key>files/stacks_page_page45.js</key>
 							<dict>
@@ -132,11 +132,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								3v1AIOKz1rlC
-								kahrvavsDg==
+								7q5BQVtXidMT
+								yiqf49/8JQ==
 								</data>
 								<key>Size</key>
-								<integer>40432</integer>
+								<integer>43417</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
