Added Press and Publicstions content
Added Press and Publicstions content

--- a/vermontcomplexsystems-foundation.rw/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Contents.plist
@@ -797,7 +797,7 @@
 					<key>page13 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-27T21:39:14Z</date>
+						<date>2018-03-28T17:05:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -822,15 +822,155 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
+							<key>files/stacks-image-20a9b85-148x112.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								BZLvZKuqsTXL
+								tioM4/eGYg==
+								</data>
+								<key>Size</key>
+								<integer>21473</integer>
+							</dict>
+							<key>files/stacks-image-29f94dd-148x80.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								EYK/gpQVOrqw
+								9IMTJUPVPg==
+								</data>
+								<key>Size</key>
+								<integer>10705</integer>
+							</dict>
+							<key>files/stacks-image-369360d-150x82.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								2hsY+T1wgU5S
+								MQW8rqnlJw==
+								</data>
+								<key>Size</key>
+								<integer>6374</integer>
+							</dict>
+							<key>files/stacks-image-42e96b3-150x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								PUDUlnNXc4Xa
+								0G/bLI0+dA==
+								</data>
+								<key>Size</key>
+								<integer>7905</integer>
+							</dict>
+							<key>files/stacks-image-75b8789-150x52.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								ecVNEUiNjmo9
+								Gn5zTxyBIA==
+								</data>
+								<key>Size</key>
+								<integer>20349</integer>
+							</dict>
+							<key>files/stacks-image-7b8a594.gif</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								4FW+dF4KU3yp
+								hYIK07anwA==
+								</data>
+								<key>Size</key>
+								<integer>25767</integer>
+							</dict>
+							<key>files/stacks-image-9d5546e-150x188.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1r06g3Xah+j8
+								Qr05tT9jkQ==
+								</data>
+								<key>Size</key>
+								<integer>30000</integer>
+							</dict>
+							<key>files/stacks-image-a2c916c-150x148.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								G5gXX6xln5Hc
+								PBUvDYe+7A==
+								</data>
+								<key>Size</key>
+								<integer>19246</integer>
+							</dict>
+							<key>files/stacks-image-ac0a62a-150x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								vMXUpBHkzd/P
+								iycL7fJwFA==
+								</data>
+								<key>Size</key>
+								<integer>5782</integer>
+							</dict>
+							<key>files/stacks-image-b438d3e-150x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								lR3wVUUk9Ro/
+								BZdkPdlhpQ==
+								</data>
+								<key>Size</key>
+								<integer>19240</integer>
+							</dict>
+							<key>files/stacks-image-b99fbf1-150x144.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								AIhBUIZ7Nf4/
+								UrLP5j4AWA==
+								</data>
+								<key>Size</key>
+								<integer>7771</integer>
+							</dict>
+							<key>files/stacks-image-bed233e-150x120.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								bzwiKUQtFSMC
+								o0lvPwkXtg==
+								</data>
+								<key>Size</key>
+								<integer>8470</integer>
+							</dict>
+							<key>files/stacks-image-d1216db-150x112.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								6ZwdPwvYxOHm
+								qyXcNeRsHg==
+								</data>
+								<key>Size</key>
+								<integer>6641</integer>
+							</dict>
+							<key>files/stacks-image-de46789-150x78.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								pb+VmDroxbMX
+								qc/efz5nAA==
+								</data>
+								<key>Size</key>
+								<integer>9772</integer>
+							</dict>
 							<key>files/stacks_page_page13.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								3YFk49ZqRk25
-								m5qZTB2dig==
+								W0LqnEDB8zD6
+								p06omh4c4g==
 								</data>
 								<key>Size</key>
-								<integer>131258</integer>
+								<integer>143659</integer>
 							</dict>
 							<key>files/stacks_page_page13.js</key>
 							<dict>
@@ -846,11 +986,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								CeOXRwjriEGd
-								PZ/fA5kh1A==
+								AzTMHDrBNR9q
+								MQtXSeydXg==
 								</data>
 								<key>Size</key>
-								<integer>40185</integer>
+								<integer>55473</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -1461,7 +1601,7 @@
 					<key>page23 - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-27T21:39:14Z</date>
+						<date>2018-03-28T17:05:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -1486,15 +1626,185 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
+							<key>files/stacks-image-02120b5-150x48.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								XBvf62Opxz19
+								vkxyUlAstw==
+								</data>
+								<key>Size</key>
+								<integer>5274</integer>
+							</dict>
+							<key>files/stacks-image-22092d6-150x48.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								dgUyYK2AklU1
+								1jclhXJ9QQ==
+								</data>
+								<key>Size</key>
+								<integer>5685</integer>
+							</dict>
+							<key>files/stacks-image-611cc0e-150x60.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								M6wjFYY3iBy8
+								+UmEVfI1HQ==
+								</data>
+								<key>Size</key>
+								<integer>5942</integer>
+							</dict>
+							<key>files/stacks-image-6980f10-148x122.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SEAeNA9KCw5Q
+								I3lbIhtOIA==
+								</data>
+								<key>Size</key>
+								<integer>23393</integer>
+							</dict>
+							<key>files/stacks-image-6a4e041-150x82.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DObtBd4HDSHt
+								2gkNxM059A==
+								</data>
+								<key>Size</key>
+								<integer>9970</integer>
+							</dict>
+							<key>files/stacks-image-87a2eff-150x72.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								bXBO7CpzU7mI
+								s3FcUF3wvw==
+								</data>
+								<key>Size</key>
+								<integer>6118</integer>
+							</dict>
+							<key>files/stacks-image-9afa408-148x94.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SeDqqpbbgTfA
+								Q5hVhm8fJQ==
+								</data>
+								<key>Size</key>
+								<integer>23885</integer>
+							</dict>
+							<key>files/stacks-image-9d5546e-150x188.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1r06g3Xah+j8
+								Qr05tT9jkQ==
+								</data>
+								<key>Size</key>
+								<integer>30000</integer>
+							</dict>
+							<key>files/stacks-image-a2c916c-150x148.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								G5gXX6xln5Hc
+								PBUvDYe+7A==
+								</data>
+								<key>Size</key>
+								<integer>19246</integer>
+							</dict>
+							<key>files/stacks-image-afdb629-148x54.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YOYfoww43NlX
+								oDbFWdjXeg==
+								</data>
+								<key>Size</key>
+								<integer>6801</integer>
+							</dict>
+							<key>files/stacks-image-b438d3e-150x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								lR3wVUUk9Ro/
+								BZdkPdlhpQ==
+								</data>
+								<key>Size</key>
+								<integer>19240</integer>
+							</dict>
+							<key>files/stacks-image-b99fbf1-150x144.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								AIhBUIZ7Nf4/
+								UrLP5j4AWA==
+								</data>
+								<key>Size</key>
+								<integer>7771</integer>
+							</dict>
+							<key>files/stacks-image-be8877d-150x58.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								rbb8nTKMQO+G
+								5ZrWacb1dQ==
+								</data>
+								<key>Size</key>
+								<integer>9852</integer>
+							</dict>
+							<key>files/stacks-image-c1ba1a1-150x44.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								8Raf84hY29O8
+								ViuhIWZPbw==
+								</data>
+								<key>Size</key>
+								<integer>6605</integer>
+							</dict>
+							<key>files/stacks-image-c1f13f0-150x118.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hoN+CW91I79i
+								dHd+DxILcQ==
+								</data>
+								<key>Size</key>
+								<integer>14450</integer>
+							</dict>
+							<key>files/stacks-image-c1f13f0-150x118@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								bBzbMePwZ5/u
+								CguKcIW3fw==
+								</data>
+								<key>Size</key>
+								<integer>39219</integer>
+							</dict>
+							<key>files/stacks-image-d3bb225-150x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1h4Sn9QbZYmq
+								w/mijaCKTA==
+								</data>
+								<key>Size</key>
+								<integer>11213</integer>
+							</dict>
 							<key>files/stacks_page_page23.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								s1lCy7o8RmP9
-								Wb3UsrBBNw==
+								8UvwJ44lzR59
+								cBSbz1qL1w==
 								</data>
 								<key>Size</key>
-								<integer>131215</integer>
+								<integer>145679</integer>
 							</dict>
 							<key>files/stacks_page_page23.js</key>
 							<dict>
@@ -1510,11 +1820,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eLD+BT6Tc59D
-								D4WQpUmOxQ==
+								JxawoLzXE6mi
+								uF22ZZ3wMg==
 								</data>
 								<key>Size</key>
-								<integer>40165</integer>
+								<integer>58516</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4737,7 +5047,7 @@
 					<key>rw:document:extrafiles - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-27T21:39:14Z</date>
+						<date>2018-03-28T17:05:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -4786,11 +5096,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								v44n+2LrRfLY
-								x6I6XCS/tg==
+								BPTB8IcTd6Sr
+								O+v8cXJKkg==
 								</data>
 								<key>Size</key>
-								<integer>3162</integer>
+								<integer>3450</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
@@ -4803,7 +5113,7 @@
 					<key>rw:plugin:stacks - sftp:/cmplxsys.w3.uvm.edu/www-root/templatery</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-28T14:33:51Z</date>
+						<date>2018-03-28T17:05:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -5842,11 +6152,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								2VX3aLds6+70
-								5ImjcD2dTw==
+								3ag0AvH8MaFQ
+								YpFqzC1nsw==
 								</data>
 								<key>Size</key>
-								<integer>1979</integer>
+								<integer>2051</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
