--- a/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/2-Publications/Contents.plist
+++ b/vermontcomplexsystems-foundation.rw/Pages/04-003Cheader003EResearch003C002Fheader003E/ChildPages/2-Publications/Contents.plist
@@ -33,7 +33,7 @@
 					<key>sftp://cmplxsys.w3.uvm.edu</key>
 					<dict>
 						<key>CreationDate</key>
-						<date>2018-03-27T21:39:14Z</date>
+						<date>2018-03-28T17:05:09Z</date>
 						<key>DigestAlgorithm</key>
 						<string>MD5</string>
 						<key>PageDigests</key>
@@ -58,15 +58,185 @@
 								<key>Size</key>
 								<integer>68548</integer>
 							</dict>
+							<key>files/stacks-image-02120b5-150x48.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								XBvf62Opxz19
+								vkxyUlAstw==
+								</data>
+								<key>Size</key>
+								<integer>5274</integer>
+							</dict>
+							<key>files/stacks-image-22092d6-150x48.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								dgUyYK2AklU1
+								1jclhXJ9QQ==
+								</data>
+								<key>Size</key>
+								<integer>5685</integer>
+							</dict>
+							<key>files/stacks-image-611cc0e-150x60.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								M6wjFYY3iBy8
+								+UmEVfI1HQ==
+								</data>
+								<key>Size</key>
+								<integer>5942</integer>
+							</dict>
+							<key>files/stacks-image-6980f10-148x122.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SEAeNA9KCw5Q
+								I3lbIhtOIA==
+								</data>
+								<key>Size</key>
+								<integer>23393</integer>
+							</dict>
+							<key>files/stacks-image-6a4e041-150x82.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								DObtBd4HDSHt
+								2gkNxM059A==
+								</data>
+								<key>Size</key>
+								<integer>9970</integer>
+							</dict>
+							<key>files/stacks-image-87a2eff-150x72.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								bXBO7CpzU7mI
+								s3FcUF3wvw==
+								</data>
+								<key>Size</key>
+								<integer>6118</integer>
+							</dict>
+							<key>files/stacks-image-9afa408-148x94.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								SeDqqpbbgTfA
+								Q5hVhm8fJQ==
+								</data>
+								<key>Size</key>
+								<integer>23885</integer>
+							</dict>
+							<key>files/stacks-image-9d5546e-150x188.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1r06g3Xah+j8
+								Qr05tT9jkQ==
+								</data>
+								<key>Size</key>
+								<integer>30000</integer>
+							</dict>
+							<key>files/stacks-image-a2c916c-150x148.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								G5gXX6xln5Hc
+								PBUvDYe+7A==
+								</data>
+								<key>Size</key>
+								<integer>19246</integer>
+							</dict>
+							<key>files/stacks-image-afdb629-148x54.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								YOYfoww43NlX
+								oDbFWdjXeg==
+								</data>
+								<key>Size</key>
+								<integer>6801</integer>
+							</dict>
+							<key>files/stacks-image-b438d3e-150x150.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								lR3wVUUk9Ro/
+								BZdkPdlhpQ==
+								</data>
+								<key>Size</key>
+								<integer>19240</integer>
+							</dict>
+							<key>files/stacks-image-b99fbf1-150x144.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								AIhBUIZ7Nf4/
+								UrLP5j4AWA==
+								</data>
+								<key>Size</key>
+								<integer>7771</integer>
+							</dict>
+							<key>files/stacks-image-be8877d-150x58.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								rbb8nTKMQO+G
+								5ZrWacb1dQ==
+								</data>
+								<key>Size</key>
+								<integer>9852</integer>
+							</dict>
+							<key>files/stacks-image-c1ba1a1-150x44.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								8Raf84hY29O8
+								ViuhIWZPbw==
+								</data>
+								<key>Size</key>
+								<integer>6605</integer>
+							</dict>
+							<key>files/stacks-image-c1f13f0-150x118.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								hoN+CW91I79i
+								dHd+DxILcQ==
+								</data>
+								<key>Size</key>
+								<integer>14450</integer>
+							</dict>
+							<key>files/stacks-image-c1f13f0-150x118@2x.png</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								bBzbMePwZ5/u
+								CguKcIW3fw==
+								</data>
+								<key>Size</key>
+								<integer>39219</integer>
+							</dict>
+							<key>files/stacks-image-d3bb225-150x98.jpg</key>
+							<dict>
+								<key>Digest</key>
+								<data>
+								1h4Sn9QbZYmq
+								w/mijaCKTA==
+								</data>
+								<key>Size</key>
+								<integer>11213</integer>
+							</dict>
 							<key>files/stacks_page_page23.css</key>
 							<dict>
 								<key>Digest</key>
 								<data>
-								s1lCy7o8RmP9
-								Wb3UsrBBNw==
+								8UvwJ44lzR59
+								cBSbz1qL1w==
 								</data>
 								<key>Size</key>
-								<integer>131215</integer>
+								<integer>145679</integer>
 							</dict>
 							<key>files/stacks_page_page23.js</key>
 							<dict>
@@ -82,11 +252,11 @@
 							<dict>
 								<key>Digest</key>
 								<data>
-								eLD+BT6Tc59D
-								D4WQpUmOxQ==
+								JxawoLzXE6mi
+								uF22ZZ3wMg==
 								</data>
 								<key>Size</key>
-								<integer>40165</integer>
+								<integer>58516</integer>
 							</dict>
 						</dict>
 						<key>PageID</key>
